// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transaction Stats Extension > TransactionDailyStats model > Daily stats functions > populate > should fill in stats correctly when \`Date\` objects are passed 1`] = `
[
  {
    "avgBlobAsCalldataFee": 20000,
    "avgBlobFee": 2621440,
    "avgBlobGasPrice": 20,
    "avgMaxBlobGasFee": 100,
    "category": "OTHER",
    "day": 2023-08-28T00:00:00.000Z,
    "id": 305,
    "rollup": null,
    "totalBlobAsCalldataFee": "20000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobFee": "2621440",
    "totalBlobGasUsed": "131072",
    "totalTransactions": 1,
    "totalUniqueReceivers": 1,
    "totalUniqueSenders": 1,
  },
  {
    "avgBlobAsCalldataFee": 20000,
    "avgBlobFee": 7864320,
    "avgBlobGasPrice": 20,
    "avgMaxBlobGasFee": 100,
    "category": "ROLLUP",
    "day": 2023-08-28T00:00:00.000Z,
    "id": 306,
    "rollup": "OPTIMISM",
    "totalBlobAsCalldataFee": "20000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobFee": "7864320",
    "totalBlobGasUsed": "393216",
    "totalTransactions": 1,
    "totalUniqueReceivers": 1,
    "totalUniqueSenders": 1,
  },
  {
    "avgBlobAsCalldataFee": 22000,
    "avgBlobFee": 2883584,
    "avgBlobGasPrice": 22,
    "avgMaxBlobGasFee": 100,
    "category": "OTHER",
    "day": 2023-08-31T00:00:00.000Z,
    "id": 307,
    "rollup": null,
    "totalBlobAsCalldataFee": "44000",
    "totalBlobAsCalldataGasUsed": "2000",
    "totalBlobFee": "5767168",
    "totalBlobGasUsed": "262144",
    "totalTransactions": 2,
    "totalUniqueReceivers": 2,
    "totalUniqueSenders": 2,
  },
  {
    "avgBlobAsCalldataFee": 22000,
    "avgBlobFee": 8650752,
    "avgBlobGasPrice": 22,
    "avgMaxBlobGasFee": 100,
    "category": "ROLLUP",
    "day": 2023-08-31T00:00:00.000Z,
    "id": 308,
    "rollup": "OPTIMISM",
    "totalBlobAsCalldataFee": "22000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobFee": "8650752",
    "totalBlobGasUsed": "393216",
    "totalTransactions": 1,
    "totalUniqueReceivers": 1,
    "totalUniqueSenders": 1,
  },
]
`;

exports[`Transaction Stats Extension > TransactionDailyStats model > Daily stats functions > populate > should fill in stats correctly when \`dayjs\` objects are passed 1`] = `
[
  {
    "avgBlobAsCalldataFee": 20000,
    "avgBlobFee": 2621440,
    "avgBlobGasPrice": 20,
    "avgMaxBlobGasFee": 100,
    "category": "OTHER",
    "day": 2023-08-28T00:00:00.000Z,
    "id": 309,
    "rollup": null,
    "totalBlobAsCalldataFee": "20000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobFee": "2621440",
    "totalBlobGasUsed": "131072",
    "totalTransactions": 1,
    "totalUniqueReceivers": 1,
    "totalUniqueSenders": 1,
  },
  {
    "avgBlobAsCalldataFee": 20000,
    "avgBlobFee": 7864320,
    "avgBlobGasPrice": 20,
    "avgMaxBlobGasFee": 100,
    "category": "ROLLUP",
    "day": 2023-08-28T00:00:00.000Z,
    "id": 310,
    "rollup": "OPTIMISM",
    "totalBlobAsCalldataFee": "20000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobFee": "7864320",
    "totalBlobGasUsed": "393216",
    "totalTransactions": 1,
    "totalUniqueReceivers": 1,
    "totalUniqueSenders": 1,
  },
  {
    "avgBlobAsCalldataFee": 22000,
    "avgBlobFee": 2883584,
    "avgBlobGasPrice": 22,
    "avgMaxBlobGasFee": 100,
    "category": "OTHER",
    "day": 2023-08-31T00:00:00.000Z,
    "id": 311,
    "rollup": null,
    "totalBlobAsCalldataFee": "44000",
    "totalBlobAsCalldataGasUsed": "2000",
    "totalBlobFee": "5767168",
    "totalBlobGasUsed": "262144",
    "totalTransactions": 2,
    "totalUniqueReceivers": 2,
    "totalUniqueSenders": 2,
  },
  {
    "avgBlobAsCalldataFee": 22000,
    "avgBlobFee": 8650752,
    "avgBlobGasPrice": 22,
    "avgMaxBlobGasFee": 100,
    "category": "ROLLUP",
    "day": 2023-08-31T00:00:00.000Z,
    "id": 312,
    "rollup": "OPTIMISM",
    "totalBlobAsCalldataFee": "22000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobFee": "8650752",
    "totalBlobGasUsed": "393216",
    "totalTransactions": 1,
    "totalUniqueReceivers": 1,
    "totalUniqueSenders": 1,
  },
]
`;

exports[`Transaction Stats Extension > TransactionDailyStats model > Daily stats functions > populate > should fill in stats for a period with no data 1`] = `[]`;

exports[`Transaction Stats Extension > TransactionDailyStats model > Daily stats functions > populate > should ignore reorged blocks when aggregating stats 1`] = `[]`;

exports[`Transaction Stats Extension > TransactionDailyStats model > Daily stats functions > populate > when filling in stats for a multiple days period > should do it correctly when \`YYYY-MM-DD\` dates are passed 1`] = `
[
  {
    "avgBlobAsCalldataFee": 20000,
    "avgBlobFee": 2621440,
    "avgBlobGasPrice": 20,
    "avgMaxBlobGasFee": 100,
    "category": "OTHER",
    "day": 2023-08-28T00:00:00.000Z,
    "id": 301,
    "rollup": null,
    "totalBlobAsCalldataFee": "20000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobFee": "2621440",
    "totalBlobGasUsed": "131072",
    "totalTransactions": 1,
    "totalUniqueReceivers": 1,
    "totalUniqueSenders": 1,
  },
  {
    "avgBlobAsCalldataFee": 20000,
    "avgBlobFee": 7864320,
    "avgBlobGasPrice": 20,
    "avgMaxBlobGasFee": 100,
    "category": "ROLLUP",
    "day": 2023-08-28T00:00:00.000Z,
    "id": 302,
    "rollup": "OPTIMISM",
    "totalBlobAsCalldataFee": "20000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobFee": "7864320",
    "totalBlobGasUsed": "393216",
    "totalTransactions": 1,
    "totalUniqueReceivers": 1,
    "totalUniqueSenders": 1,
  },
  {
    "avgBlobAsCalldataFee": 22000,
    "avgBlobFee": 2883584,
    "avgBlobGasPrice": 22,
    "avgMaxBlobGasFee": 100,
    "category": "OTHER",
    "day": 2023-08-31T00:00:00.000Z,
    "id": 303,
    "rollup": null,
    "totalBlobAsCalldataFee": "44000",
    "totalBlobAsCalldataGasUsed": "2000",
    "totalBlobFee": "5767168",
    "totalBlobGasUsed": "262144",
    "totalTransactions": 2,
    "totalUniqueReceivers": 2,
    "totalUniqueSenders": 2,
  },
  {
    "avgBlobAsCalldataFee": 22000,
    "avgBlobFee": 8650752,
    "avgBlobGasPrice": 22,
    "avgMaxBlobGasFee": 100,
    "category": "ROLLUP",
    "day": 2023-08-31T00:00:00.000Z,
    "id": 304,
    "rollup": "OPTIMISM",
    "totalBlobAsCalldataFee": "22000",
    "totalBlobAsCalldataGasUsed": "1000",
    "totalBlobFee": "8650752",
    "totalBlobGasUsed": "393216",
    "totalTransactions": 1,
    "totalUniqueReceivers": 1,
    "totalUniqueSenders": 1,
  },
]
`;
